<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>oomact_ros_examples</name>
  <version>0.0.1</version>
  <description>ROS based examples for oomact</description>
  <maintainer email="sommerh@ethz.ch">Hannes Sommer</maintainer>
  <author>Zachary Taylor, Hannes Sommer</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>.
 
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>oomact</depend>
  <depend>rosbag</depend>

  <test_depend>unittest</test_depend>
</package>
