<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>oomact_tests</name>
  <version>0.0.1</version>
  <description>Collection of high level tests for the oomact</description>
  <maintainer email="sommerh@ethz.ch">Hannes Sommer</maintainer>
  <author>Hannes Sommer, Jerome Maye</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>.
 
  <depend>glog_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>oomact</depend>
</package>
