<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>oomact_toy_examples</name>
  <version>0.0.1</version>
  <description>Collection of toy examples for the oomact</description>
  <maintainer email="sommerh@ethz.ch">Hannes Sommer</maintainer>
  <author>Hannes Sommer</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>.
 
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>oomact</depend>

  <test_depend>unittest</test_depend>
</package>
